--- a/index.html
+++ b/index.html
@@ -4,21 +4,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+  <!-- vueJs -->
+  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+  <!-- foglio di stile personale -->
   <link rel="stylesheet" href="css/app.css">
   <title>Esempio Sass</title>
 </head>
 <body>
-  <h1>Esempio di titolo, primo test con Sass</h1>
-  <div class="paragraphs">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
 
-  <div class="buttons">
-    <button type="button" name="button">bottone 1</button>
-    <button type="button" name="button">bottone 2</button>
-    <button type="button" name="button">bottone 3</button>
-    <button type="button" name="button">bottone 4</button>
-  </div>
+  <header>
+    <h1><a href="#">MAYWOOD</a></h1>
+    <p class="location">1 Example Street, Anytown, NY 10100 USA</p>
+    <nav>
+      <ul id="nav-list">
+        <li v-for="li in navList"><a href="#">{{ li }}</a></li>
+      </ul>
+      <ul id="social-list">
+        <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="enjoy">
+      <div class="container-text">
+        <h2>Enjoy Our Food Experience</h2>
+        <p class="inside-image">
+          We don’t just make food. We make people’s experience. Maywood was built on the belief that food should be special, and we carry that belief into everything we do.
+        </p>
+        <button type="button" name="button">View our menu</button>
+      </div>
+    </section>
+  </main>
+
+  <script src="js/script.js" charset="utf-8"></script>
 </body>
 </html>
